--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@ body{
     color:red;
     background: black;
 }
+header{
+    border-bottom: solid 2 px blue;
+    padding: 20 px;
+    font-size: 32 px;
+    color: green;
+}
